--- a/client/src/components/listStyle.css
+++ b/client/src/components/listStyle.css
@@ -4,7 +4,7 @@
 }
 
 .titleText {
-  font-family: Open Sans;
+  font-family: "Interstate", "Lucida Grande", "Lucida Sans Unicode", Garuda, Verdana;
   width: 400px;
   font-weight: normal;
   color: rgb(153, 153, 153);
